--- a/templates/pages/contacts.html.twig
+++ b/templates/pages/contacts.html.twig
@@ -37,7 +37,7 @@
                     <span>СВЯЗАТЬСЯ С НАМИ</span>
                     <span class="text-black">ШТАБ-КВАРТИРА / МИНСК</span>
                 </div>
-                <h1 class="text-6xl md:text-9xl font-black tracking-tighter uppercase mb-16 max-w-5xl leading-none js-reveal">
+                <h1 class="text-[11vw] sm:text-6xl md:text-9xl font-black tracking-tighter uppercase mb-16 max-w-5xl leading-none js-reveal">
                     ГЛОБАЛЬНЫЙ<br>ОХВАТ
                 </h1>
                 <hr class="border-black mb-16 js-reveal">
