--- a/templates/pages/services/index.html.twig
+++ b/templates/pages/services/index.html.twig
@@ -14,7 +14,7 @@
                     <span>НАШИ УСЛУГИ</span>
                     <span class="text-black">ОСНОВНЫЕ НАПРАВЛЕНИЯ</span>
                 </div>
-                <h1 class="text-6xl md:text-9xl font-black tracking-tighter uppercase mb-16 max-w-5xl leading-none js-reveal">
+                <h1 class="text-[11vw] sm:text-6xl md:text-9xl font-black tracking-tighter uppercase mb-16 max-w-5xl leading-none js-reveal">
                     ЦИФРОВОЙ<br>АРСЕНАЛ
                 </h1>
                 <hr class="border-black mb-16 js-reveal">
@@ -82,7 +82,7 @@
                             </div>
                             <div>
                                 <span class="block text-[10px] font-bold tracking-widest text-gray-500 uppercase mb-1">Стоимость</span>
-                                <span class="text-lg font-black">от 70 000 ₽</span>
+                                <span class="text-lg font-black">от 850 BYN</span>
                             </div>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                             </div>
                             <div>
                                 <span class="block text-[10px] font-bold tracking-widest text-gray-500 uppercase mb-1">Стоимость</span>
-                                <span class="text-lg font-black">от 950 BYN</span>
+                                <span class="text-lg font-black">от 790 BYN</span>
                             </div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                             </div>
                             <div>
                                 <span class="block text-[10px] font-bold tracking-widest text-gray-500 uppercase mb-1">Стоимость</span>
-                                <span class="text-lg font-black">от 750 BYN</span>
+                                <span class="text-lg font-black">от 650 BYN</span>
                             </div>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                             </div>
                             <div>
                                 <span class="block text-[10px] font-bold tracking-widest text-gray-500 uppercase mb-1">Стоимость</span>
-                                <span class="text-lg font-black">от 350 BYN</span>
+                                <span class="text-lg font-black">от 340 BYN</span>
                             </div>
                         </div>
                     </div>
@@ -304,11 +304,11 @@
                             </div>
                             <div>
                                 <span class="block text-[10px] font-bold tracking-widest text-gray-500 uppercase mb-1">CMS Решения</span>
-                                <span class="text-lg font-black uppercase">от 800 BYN</span>
+                                <span class="text-lg font-black uppercase">от 680 BYN</span>
                             </div>
                             <div>
                                 <span class="block text-[10px] font-bold tracking-widest text-gray-500 uppercase mb-1">Custom App</span>
-                                <span class="text-lg font-black">от 1600 BYN</span>
+                                <span class="text-lg font-black">от 1350 BYN</span>
                             </div>
                         </div>
                     </div>
