style: perfect responsive typography taking max width on all screens and fix database errors

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -17,7 +17,7 @@
                     <span>ОБЗОР АГЕНТСТВА</span>
                     <span class="text-black">ОСНОВАНО В 2018</span>
                 </div>
-                <h1 class="text-[11vw] sm:text-6xl md:text-9xl font-black tracking-tighter uppercase mb-16 max-w-5xl leading-none js-reveal">
+                <h1 class="text-[13vw] sm:text-[10vw] md:text-9xl break-words hyphens-auto leading-none font-black tracking-tighter uppercase mb-8 js-reveal">
                     ФОРМИРУЕМ<br>ИНТЕЛЛЕКТ
                 </h1>
                 <hr class="border-black mb-16 js-reveal">
