--- a/templates/pages/services/geo/geomain.html.twig
+++ b/templates/pages/services/geo/geomain.html.twig
@@ -15,7 +15,7 @@
                     </a>
                     <span class="text-black">01. НОВАЯ ЭРА</span>
                 </div>
-                <h1 class="text-[11vw] sm:text-6xl md:text-9xl font-black tracking-tighter uppercase mb-8 leading-none js-reveal">
+                <h1 class="text-[13vw] sm:text-[10vw] md:text-9xl break-words hyphens-auto leading-none font-black tracking-tighter uppercase mb-8 js-reveal">
                     GEO<br>ПРОДВИЖЕНИЕ
                 </h1>
                 <hr class="border-black mb-16 js-reveal">
