--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -12,7 +12,7 @@
                     <span>НОВЕЙШИЕ ДАННЫЕ</span>
                     <span class="text-black">ЖУРНАЛ</span>
                 </div>
-                <h1 class="text-[11vw] sm:text-6xl md:text-9xl font-black tracking-tighter uppercase mb-16 leading-none js-reveal">
+                <h1 class="text-[13vw] sm:text-[10vw] md:text-9xl break-words hyphens-auto leading-none font-black tracking-tighter uppercase mb-8 js-reveal">
                     СИГНАЛ /<br>ШУМ
                 </h1>
                 <hr class="border-black mb-16 js-reveal">
