--- a/templates/pages/services/ads/adsmain.html.twig
+++ b/templates/pages/services/ads/adsmain.html.twig
@@ -14,7 +14,7 @@
                     </a>
                     <span class="text-black">04. ПЕРФОМАНС</span>
                 </div>
-                <h1 class="text-[11vw] sm:text-6xl md:text-9xl font-black tracking-tighter uppercase mb-8 leading-none js-reveal">
+                <h1 class="text-[13vw] sm:text-[10vw] md:text-9xl break-words hyphens-auto leading-none font-black tracking-tighter uppercase mb-8 js-reveal">
                     КОНТЕКСТНАЯ<br>РЕКЛАМА / PPC
                 </h1>
                 <hr class="border-black mb-16 js-reveal">
