--- a/templates/pages/services/index.html.twig
+++ b/templates/pages/services/index.html.twig
@@ -14,7 +14,7 @@
                     <span>НАШИ УСЛУГИ</span>
                     <span class="text-black">ОСНОВНЫЕ НАПРАВЛЕНИЯ</span>
                 </div>
-                <h1 class="text-[11vw] sm:text-6xl md:text-9xl font-black tracking-tighter uppercase mb-16 max-w-5xl leading-none js-reveal">
+                <h1 class="text-[13vw] sm:text-[10vw] md:text-9xl break-words hyphens-auto leading-none font-black tracking-tighter uppercase mb-8 js-reveal">
                     ЦИФРОВОЙ<br>АРСЕНАЛ
                 </h1>
                 <hr class="border-black mb-16 js-reveal">
